--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-tooltip": "^4.2.4",
     "@types/uuid": "^9.0.7",
     "axios": "^1.4.0",
+    "classnames": "^2.5.1",
     "lodash-ts": "^1.2.7",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
