--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "template-app",
-  "version": "0.1.0",
+  "name": "albion-calculator-app",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^22.10.5",
     "@types/react": "^18.2.32",
     "@types/react-dom": "^18.2.14",
     "@types/react-tooltip": "^4.2.4",
     "@types/uuid": "^9.0.7",
+    "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.4.0",
     "classnames": "^2.5.1",
     "lodash-ts": "^1.2.7",
@@ -23,7 +25,6 @@
     "react-loadable": "^5.5.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
-    "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-tooltip": "^5.25.1",
     "sass": "^1.63.6",
@@ -32,31 +33,12 @@
     "typescript": "^4.9.5",
     "typescript-plugin-css-modules": "^5.0.2",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "vite": "^6.0.7"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
     "@types/css-modules": "^1.0.5",
