--- a/package.json
+++ b/package.json
@@ -2,19 +2,16 @@
   "name": "albion-calculator-app",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/node": "^22.10.5",
-    "@types/react": "^18.2.32",
-    "@types/react-dom": "^18.2.14",
-    "@types/react-tooltip": "^4.2.4",
-    "@types/uuid": "^9.0.7",
     "@vitejs/plugin-react": "^4.3.4",
     "axios": "^1.4.0",
     "classnames": "^2.5.1",
+    "globals": "^15.14.0",
     "lodash-ts": "^1.2.7",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
@@ -30,10 +27,9 @@
     "sass": "^1.63.6",
     "styled-components": "^6.1.8",
     "typed-scss-modules": "^8.0.0",
-    "typescript": "^4.9.5",
+    "typescript": "~5.6.2",
     "typescript-plugin-css-modules": "^5.0.2",
-    "uuid": "^9.0.0",
-    "vite": "^6.0.7"
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "dev": "vite",
@@ -42,6 +38,13 @@
   },
   "devDependencies": {
     "@types/css-modules": "^1.0.5",
-    "@types/lodash.debounce": "^4.0.9"
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/node": "^22.10.5",
+    "@types/react-redux": "^7.1.34",
+    "@types/react": "^18.2.32",
+    "@types/react-dom": "^18.2.14",
+    "@types/react-tooltip": "^4.2.4",
+    "@types/uuid": "^9.0.7",
+    "vite": "^6.0.7"
   }
 }
