--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "@types/css-modules": "^1.0.5",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^22.10.5",
-    "@types/react-redux": "^7.1.34",
     "@types/react": "^18.2.32",
     "@types/react-dom": "^18.2.14",
+    "@types/react-redux": "^7.1.34",
     "@types/react-tooltip": "^4.2.4",
     "@types/uuid": "^9.0.7",
-    "vite": "^6.0.7"
+    "vite": "^6.0.7",
+    "vite-plugin-checker": "^0.8.0"
   }
 }
