--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,20 +12,20 @@
     "esModuleInterop": true,
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
 
-
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": "./",
     "paths": {
       "*": ["src/*"]
-    }
+    },
+    "typeRoots": ["./node_modules/@types"]
   },
   "include": [
     "declarations.d.ts",
@@ -35,16 +35,16 @@
 
 //  {
 //  "compilerOptions": {
-//    "target": "ESNext",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-//    "module": "ESNext",                                /* Specify what module code is generated. */
+//    "target": "ESNext",                             /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+//    "module": "ESNext",                             /* Specify what module code is generated. */
 //    "moduleResolution": "node",                     /* Specify how TypeScript looks up a file from a given module specifier. */
-//    "resolveJsonModule": true,                        /* Enable importing .json files. */
-//    "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
-//    "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
-//    "strict": true,                                      /* Enable all strict type-checking options. */
-//    "skipLibCheck": true,
-//    "jsx": "react-jsx",
-//    "baseUrl": "./",
+//    "resolveJsonModule": true,                      /* Enable importing .json files. */
+//    "esModuleInterop": true,                        /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
+//    "forceConsistentCasingInFileNames": true,       /* Ensure that casing is correct in imports. */
+//    "strict": true,                                 /* Enable all strict type-checking options. */
+//    "skipLibCheck": true,                           //
+//    "jsx": "react-jsx",                             //
+//    "baseUrl": "./",                                //
 //    "paths": {
 //      "*": ["src/*"]
 //    }
