--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-spinners": "^0.13.8",
     "react-tooltip": "^5.25.1",
     "sass": "^1.63.6",
-    "styled-components": "^6.1.8",
+    "styled-components": "^6.1.14",
     "typed-scss-modules": "^8.0.0",
     "typescript": "~5.6.2",
     "typescript-plugin-css-modules": "^5.0.2",
@@ -44,6 +44,7 @@
     "@types/react-dom": "^18.2.14",
     "@types/react-redux": "^7.1.34",
     "@types/react-tooltip": "^4.2.4",
+    "@types/styled-components": "^5.1.34",
     "@types/uuid": "^9.0.7",
     "vite": "^6.0.7",
     "vite-plugin-checker": "^0.8.0"
